# cosmic-totp-client

./: Cargo.toml  README.md  i18n.toml
data/: com.koranir.CosmicTotpClient.desktop
src/: app.rs  lib.rs  localize.rs  main.rs
src/app/: entry.rs  errors.rs  secrets.rs
