[package]
name = "cosmic-totp-client"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.1"
i18n-embed = { version = "0.15.3", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.3"
libcosmic = { git = "https://github.com/pop-os/libcosmic", version = "0.1.0", features = ["applet", "applet-token"] }
rfd = { version = "0.15.2", default-features = false, features = ["xdg-portal", "tokio"] }
rqrr = "0.9.0"
rust-embed = "8.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["fs"] }
totp-rs = "5.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
