[package]
name = "cosmic-totp-client"
version = "0.2.0"
edition = "2024"

[dependencies]
# Crypto libs
age = "0.11.1"
totp-rs = { version = "5.6.0", features = ["otpauth", "serde_support"] }
keyring = { version = "3.6.2", features = ["linux-native", "tokio"] }

# Runtime libs
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "applet-token"] }
tokio = { version = "1.44.0", features = ["fs"] }
rfd = { version = "0.15.2", default-features = false, features = ["xdg-portal", "tokio"] }

# Serde
serde = "1.0.219"
serde_json = "1.0.140"

# Localisation
i18n-embed = { version = "0.15.3", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.3"
rust-embed = "8.6.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-stream = "0.1.17"
